Fixed redirect to the current page after Facebook login by using redirectUrl. THis is required b/c the default SavedRequestAwareAuthenticationSuccessHandler relies on the previous http request stored in the cache by ExceptionTranslationFilter. In this app this doesn't normally fire, as unathenticated users can view all pages in read-only mode.

--- a/web-app/src/main/resources/templates/fragments/header.html
+++ b/web-app/src/main/resources/templates/fragments/header.html
@@ -28,7 +28,7 @@
                     </form>
                 </li>
                 <li sec:authorize="isAnonymous()">
-                    <div class="btn-nav"><a class="btn btn-primary btn-small navbar-btn" href="/login">Login with Facebook</a>
+                    <div class="btn-nav"><a th:with="continueUrl=${T(java.net.URLEncoder).encode(#httpServletRequest.requestURI, 'UTF-8')}" class="btn btn-primary btn-small navbar-btn" th:href="${'/login?continue=' + continueUrl}">Login with Facebook</a>
                     </div>
                 </li>
             </ul>
